syntax = "proto3";

option csharp_namespace = "Product.Grpc.Protos";

service ProductProtoService{
	rpc GetUserProducts(GetAllProductsListRequest)returns (GetAllProductsListResponse);
	rpc GetProductById(GetProductByIdRequest)returns (GetProductByIdResponse);
	rpc ProductPurchase(ProductPurchaseMessageRequest) returns (ProductPurchaseMessageResponse);
	rpc AddToProductExist(AddToProductExistRequest)returns (AddToProductExistResponse);
}

message GetAllProductsListResponse{
	repeated GetAllProductsResponse items=1;
}

message GetAllProductsResponse{
   string Id=1;
   string ProductName =3;
   sint64 Count =4;
   sint64 Price =5;
   string FirstDescription =6;
   string SecondDescription =7;
   string ThirdDescription =8;
   string Title =9;
}

message GetAllProductsListRequest{
	string userId=1;
}

message GetProductByIdRequest{
	string ProductId=1;
}

message GetProductByIdResponse{
   string Id=1;
   string ProductName =3;
   sint64 Count =4;
   sint64 Price =5;
   string FirstDescription =6;
   string SecondDescription =7;
   string ThirdDescription =8;
   string Title =9;
}

message ProductPurchaseMessageRequest{
	string ProductId=1;
	sint64 Count=2;
}

message ProductPurchaseMessageResponse{
	sint64 Count =1;
	sint64 StatusCode=2;
}

message AddToProductExistRequest{
	string ProductId=1;
	sint64 Count=2;
}

message AddToProductExistResponse{
	sint64 Count=1;
};